--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Applications/anaconda3/envs/pytorch/bin/python"
+    "python.pythonPath": "/opt/conda/envs/pytorch_cuda10.2/bin/python"
 }
